regex, playBtn, texto reducido

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="dark">
+<html lang="es" class="dark">
 
 <head>
   <meta charset="UTF-8">
@@ -48,7 +48,7 @@
         <button id="previous-btn" aria-label="Anterior" class="mr-2">
           <svg class="w-8 h-8" id="Layer_2" style="enable-background:new 0 0 32 32;" version="1.1" viewBox="0 0 32 32" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><g><path d="M30.70001,5.01001c-0.5-0.26001-1.09003-0.22003-1.54999,0.09998l-11.63,8V6.33997c0-0.56-0.30005-1.07001-0.80005-1.32996   C16.22998,4.75,15.63,4.78998,15.16998,5.10999L1.15002,14.76001C0.73999,15.04999,0.5,15.51001,0.5,16   s0.23999,0.95996,0.65002,1.23999l14.01996,9.65002c0.26001,0.17999,0.56,0.26996,0.85004,0.26996   c0.23999,0,0.47998-0.06,0.69995-0.16998c0.5-0.26001,0.80005-0.77002,0.80005-1.33002v-6.76996l11.63,8   c0.25,0.17999,0.54999,0.26996,0.84998,0.26996c0.23999,0,0.47998-0.06,0.70001-0.16998   C31.19,26.72998,31.5,26.21997,31.5,25.65997V6.33997C31.5,5.77997,31.19,5.26996,30.70001,5.01001z" fill="#466EC3"/></g></svg>
         </button>
-        <button id="play-btn" aria-label="Reproducir" class="mr-2">
+        <button id="play-btn" aria-label="Reproducir" class="mr-2 blink-1">
           <svg class="w-8 h-8" style="enable-background:new 0 0 24 24;" version="1.1" viewBox="0 0 24 24" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><g id="info"/><g id="icons"><path d="M3.9,18.9V5.1c0-1.6,1.7-2.6,3-1.8l12,6.9c1.4,0.8,1.4,2.9,0,3.7l-12,6.9C5.6,21.5,3.9,20.5,3.9,18.9z"  fill="#466EC3" id="play"/></g></svg>
         </button>
         <button id="next-btn" aria-label="Siguiente" class="mr-2">
@@ -71,7 +71,7 @@
           <button id="previous-btn2" aria-label="Anterior"><svg class="w-8 h-8" id="Layer_2" style="enable-background:new 0 0 32 32;" version="1.1" viewBox="0 0 32 32" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><g><path d="M30.70001,5.01001c-0.5-0.26001-1.09003-0.22003-1.54999,0.09998l-11.63,8V6.33997c0-0.56-0.30005-1.07001-0.80005-1.32996   C16.22998,4.75,15.63,4.78998,15.16998,5.10999L1.15002,14.76001C0.73999,15.04999,0.5,15.51001,0.5,16   s0.23999,0.95996,0.65002,1.23999l14.01996,9.65002c0.26001,0.17999,0.56,0.26996,0.85004,0.26996   c0.23999,0,0.47998-0.06,0.69995-0.16998c0.5-0.26001,0.80005-0.77002,0.80005-1.33002v-6.76996l11.63,8   c0.25,0.17999,0.54999,0.26996,0.84998,0.26996c0.23999,0,0.47998-0.06,0.70001-0.16998   C31.19,26.72998,31.5,26.21997,31.5,25.65997V6.33997C31.5,5.77997,31.19,5.26996,30.70001,5.01001z" fill="#466EC3"/></g></svg></button>
         </li>
         <li class="flex-1 flex flex-col items-center justify-center">
-          <button id="play-btn2" aria-label="Reproducir"><svg class="w-8 h-8" style="enable-background:new 0 0 24 24;" version="1.1" viewBox="0 0 24 24" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><g id="info"/><g id="icons"><path d="M3.9,18.9V5.1c0-1.6,1.7-2.6,3-1.8l12,6.9c1.4,0.8,1.4,2.9,0,3.7l-12,6.9C5.6,21.5,3.9,20.5,3.9,18.9z"  fill="#466EC3"" id="play"/></g></svg></button>
+          <button id="play-btn2" aria-label="Reproducir"><svg class="w-8 h-8 blink-1" style="enable-background:new 0 0 24 24;" version="1.1" viewBox="0 0 24 24" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><g id="info"/><g id="icons"><path d="M3.9,18.9V5.1c0-1.6,1.7-2.6,3-1.8l12,6.9c1.4,0.8,1.4,2.9,0,3.7l-12,6.9C5.6,21.5,3.9,20.5,3.9,18.9z"  fill="#466EC3"" id="play"/></g></svg></button>
         </li>
         <li class="flex-1 flex flex-col items-center justify-center">
           <button  id="next-btn2" aria-label="Siguiente"><svg class="w-8 h-8" id="Layer_2" style="enable-background:new 0 0 32 32;" version="1.1" viewBox="0 0 32 32" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><g><path d="M30.84998,14.76001L16.83002,5.10999C16.37,4.78998,15.77002,4.75,15.28003,5.01001   c-0.49005,0.25995-0.80005,0.76996-0.80005,1.32996v6.77002l-11.63-8C2.39001,4.78998,1.78998,4.75,1.29999,5.01001   C0.81,5.26996,0.5,5.77997,0.5,6.33997v19.32001c0,0.56,0.31,1.07001,0.79999,1.33002   C1.52002,27.09998,1.76001,27.15997,2,27.15997c0.29999,0,0.59998-0.08997,0.84998-0.26996l11.63-8v6.76996   c0,0.56,0.31,1.07001,0.80005,1.33002c0.21997,0.10999,0.45996,0.16998,0.69995,0.16998c0.29004,0,0.59003-0.08997,0.85004-0.26996   l14.01996-9.65002C31.26001,16.95996,31.5,16.48999,31.5,16S31.26001,15.03998,30.84998,14.76001z"  fill="#466EC3"/></g></svg></button>
@@ -392,11 +392,11 @@
             loading="lazy" />
         </a>
         <div class="pl-4 pr-4">
-          <h2 class="mb-2 text-lg font-semibold text-emerald-300">
-            <a href="#" class="text-white hover:text-hover">Proestheticfit</a>
+          <h2 class="mb-2 text-lg font-semibold">
+            <a href="#" class="text-white">Proestheticfit</a>
           </h2>
           <p class="mb-3 text-sm font-normal text-white">
-            Proyecto hecho a medida mediante una estrecha comunicación con el cliente para clínica estética ubicada en Santiago de Chile.</p>
+            Proyecto hecho a medida mediante una estrecha comunicación con el cliente para clínica estética ubicada en Santiago de Chile. Esta página fue desarrollada con HTML, CSS y Javascript.</p>
           <p class="mb-3 text-sm font-normal text-white">
             <a href="https://tomasild.github.io/clinica_estetica/" class="font-medium text-white hover:text-hover">Deploy</a>
             • Junio, 2023
@@ -410,11 +410,11 @@
             loading="lazy" />
         </a>
         <div class="pl-4 pr-4">
-          <h2 class="mb-2 text-lg font-semibold text-emerald-300">
-            <a href="#" class="text-white hover:text-hover">IA en Español</a>
+          <h2 class="mb-2 text-lg font-semibold">
+            <a href="#" class="text-white">IA en Español</a>
           </h2>
           <p class="mb-3 text-sm font-normal text-white">
-            Blog desarrollado con Wordpress para ayudar a las personas a alfabetizarse digitalmente y aprender acerca de inteligencia artificial (IA).
+            Blog desarrollado para ayudar a las personas a alfabetizarse digitalmente y aprender acerca de inteligencia artificial (IA). Para el desarrollo del blog aprendi Wordpress y woocommerce, ademas de herramientas de email marketing entre otras.
           </p>
           <p class="mb-3 text-sm font-normal text-white">
             <a href="#" class="font-medium text-white hover:text-hover">Blog</a>
@@ -429,11 +429,11 @@
             loading="lazy" />
         </a>
         <div class="pl-4 pr-4">
-          <h2 class="mb-2 text-lg font-semibold text-emerald-300">
-            <a href="#" class="text-white hover:text-hover">Portfolio</a>
+          <h2 class="mb-2 text-lg font-semibold">
+            <a href="#" class="text-white">Portfolio</a>
           </h2>
           <p class="mb-3 text-sm font-normal text-white">
-            Primer Portfolio profesional desarrollado por <strong>@tomas.ild</strong> que estas visualizando en estos momentos.
+            Primer Portfolio profesional desarrollado por <strong>@tomas.ild</strong> que estas visualizando en estos momentos. Para el desarrollo del mismo decidi aprender Tailwind CSS y aplicar Javascript en profundidad, tambien planeo la utilizacion de GSAP para futuras animaciones.
           </p>
           <p class="mb-3 text-sm font-normal text-white">
             <a href="#inicio" class="font-medium text-white hover:text-hover">Portfolio profesional</a>
@@ -447,7 +447,7 @@
   <!--CONTACTO-->
   <section id="contacto" class="text-gray-400 bg-destacado dark:bg-general bg-opacity-70 backdrop-filter backdrop-blur-lg shadow-lg body-font relative">
     <div class="container px-5 py-24 mx-auto flex sm:flex-nowrap flex-wrap">
-      <div class="lg:w-2/3 md:w-1/2 bg-lofi bg-cover rounded-xl overflow-hidden sm:mr-10 p-10 flex items-end justify-start relative">
+      <div id="contactImg" class="lg:w-2/3 md:w-1/2 bg-lofi bg-cover rounded-xl overflow-hidden sm:mr-10 p-10 flex items-end justify-start relative">
         <div class=" bg-destacado dark:bg-general bg-opacity-70 backdrop-filter backdrop-blur-lg shadow-lg  relative flex flex-wrap py-6 rounded-xl">
           <div class="lg:w-1/2 px-6">
             <h2 class="title-font font-semibold text-white tracking-widest text-xs">CONTACTO</h2>
@@ -466,17 +466,17 @@
         <form id="contact-form" action="https://formspree.io/f/xdovqplz" method="post">
           <div class="relative mb-4">
             <label for="name" class="leading-7 text-sm text-white dark:text-gray-400">Nombre</label>
-            <input type="text" id="name" name="name" pattern="[a-zA-Z\s]{4,30}"
+            <input type="text" id="name" name="name" placeholder="Escribe tu nombre" pattern="[a-zA-ZÑñ\s]{4,30}" title="Ingresa un nombre válido"
               class="w-full bg-claro dark:bg-gray-800 rounded-md border border-gray-700 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-900 text-base outline-none text-black font-semibold dark:text-gray-100 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out" required>
           </div>
           <div class="relative mb-4">
             <label for="email" class="leading-7 text-sm text-white dark:text-gray-400">Email</label>
-            <input type="email" id="email" name="email" pattern="[^\s@]+@[^\s@]+\.[^\s@]+"
+            <input type="email" id="email" name="email" placeholder="ejemplo@gmail.com" pattern="[^\s@]+@[^\s@]+\.[^\s@]+" title="Ingresa un email válido"
               class="w-full bg-claro dark:bg-gray-800 rounded-md border border-gray-700 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-900 text-base outline-none text-black font-semibold dark:text-gray-100 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out" required>
           </div>
           <div class="relative mb-4">
             <label for="message" class="leading-7 text-sm text-white dark:text-gray-400">Mensaje</label>
-            <textarea id="message" name="message"
+            <textarea id="message" name="message" placeholder="Escribe tu mensaje aquí"
               class="w-full bg-white dark:bg-gray-800 rounded-md border border-gray-700 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-900 h-32 text-base outline-none text-black font-semibold dark:text-gray-100 py-1 px-3 resize-none leading-6 transition-colors duration-200 ease-in-out" required></textarea>
           </div>
           <button type="submit" class="text-white rounded-md w-full bg-casual border-2 dark:border-0 py-2 px-6 focus:outline-none hover:bg-destacado text-lg">Enviar</button>
