--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
           </div>
         </div>
         <img class="hidden lg:block md:block lg:w-3/5 md:w-1/2 object-contain object-center rounded-xl md:mt-0 mt-12 " src="img/formacion.png"
-          alt="step">
+          alt="imagen isometrica con distintos aspectos que conllevan el estudio y una formación académica">
       </div>
     </div>
   </section>
@@ -388,7 +388,7 @@
 
       <div class="bg-destacado dark:bg-general bg-opacity-70 backdrop-filter backdrop-blur-lg shadow-lg rounded-xl">
         <a href="#">
-          <img src="img/clinica.jpg" class="object-contain lg:object-cover w-full h-auto lg:h-56 mb-5 bg-center rounded-t-xl" alt="Kutty"
+          <img src="img/clinica.jpg" class="object-contain lg:object-cover w-full h-auto lg:h-56 mb-5 bg-center rounded-t-xl" alt="banner de entrada, pagina web de la clínica estética"
             loading="lazy" />
         </a>
         <div class="pl-4 pr-4">
@@ -406,7 +406,7 @@
 
       <div class="bg-destacado dark:bg-general bg-opacity-70 backdrop-filter backdrop-blur-lg shadow-lg rounded-xl">
         <a href="#">
-          <img src="img/blog.jpg" class="object-contain lg:object-cover w-full h-auto lg:h-56 mb-5 bg-center rounded-t-xl" alt="Kutty"
+          <img src="img/blog.jpg" class="object-contain lg:object-cover w-full h-auto lg:h-56 mb-5 bg-center rounded-t-xl" alt="banner de entrada, pagina web del blog de IA en español"
             loading="lazy" />
         </a>
         <div class="pl-4 pr-4">
@@ -425,7 +425,7 @@
 
       <div class="bg-destacado dark:bg-general bg-opacity-70 backdrop-filter backdrop-blur-lg shadow-lg rounded-xl">
         <a href="#">
-          <img src="img/portfolio.jpg" class="object-contain lg:object-cover w-full h-auto lg:h-56 mb-5 bg-center rounded-t-xl" alt="Kutty"
+          <img src="img/portfolio.jpg" class="object-contain lg:object-cover w-full h-auto lg:h-56 mb-5 bg-center rounded-t-xl" alt="banner de entrada de este portfolio"
             loading="lazy" />
         </a>
         <div class="pl-4 pr-4">
